--- a/column.html
+++ b/column.html
@@ -15,7 +15,7 @@
           <ul>
             <li><a href="./index.html#about">about</a></li>
             <li><a href="./recipe-list.html">recipe</a></li>
-            <li><a href="./column-list.html">column</a></li>
+            <li><a class="current" href="./column-list.html">column</a></li>
             <li><a href="./contact.html">contact</a></li>
           </ul>
         </nav>
