--- a/recipe-cat-list.html
+++ b/recipe-cat-list.html
@@ -26,7 +26,7 @@
     </header>
     <main class="l-main">
       <div class="l-container">
-        <h1 class="c-title02">レシピ一覧</h1>
+        <h1 class="c-title02">「和食」レシピ一覧</h1>
         <div class="p-recipe-list">
           <article class="p-recipe-card">
             <a href="#">
