--- a/recipe.html
+++ b/recipe.html
@@ -14,7 +14,7 @@
         <nav class="p-nav">
           <ul>
             <li><a href="./index.html#about">about</a></li>
-            <li><a href="./recipe-list.html">recipe</a></li>
+            <li><a class="current" href="./recipe-list.html">recipe</a></li>
             <li><a href="./column-list.html">column</a></li>
             <li><a href="./contact.html">contact</a></li>
           </ul>
