--- a/column-cat-list.html
+++ b/column-cat-list.html
@@ -26,7 +26,7 @@
     </header>
     <main class="l-main">
       <div class="l-container">
-        <h1 class="c-title02">コラム一覧</h1>
+        <h1 class="c-title02">「調理テクニック」コラム一覧</h1>
         <div class="p-column-list">
           <article class="p-column-list__item">
             <a href="#">
